<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Breakr</string>
    <string name="work_text">until break</string>
    <string name="break_text">until work</string>
    <string name="play_text">play</string>
    <string name="pause_text">pause</string>
    <string name="end_template">You worked for %s minute%s and took %s break%s!</string>
    <string name="intro_string">How long will this work session be?</string>
    <string name="hours_string_1">1 hour</string>
    <string name="hours_string_2">2 hours</string>
    <string name="hours_string_3">3 hours</string>
    <string name="hours_string_4">4 hours</string>
    <string name="return_to_start_string">return to start</string>
    <string name="stop_text">stop</string>
    <string name="zero_timer">00:00</string>
    <string name="until_session_end_text">until session end</string>
    <string name="place_holder">placeholder</string>
    <string name="eye_break_heading">Eye Break</string>
    <string name="eye_break_info">Take a few minutes to look away from your work, preferably out the window at something distant, and blink your eyes frequently.</string>
    <string name="rest_break_heading">Rest Break</string>
    <string name="rest_break_info">Take a short break to rest your body, do some stretching, change your position and posture, relax and think about something else.</string>
    <string name="exercise_break_heading">Exercise Break</string>
    <string name="exercise_break_info">Take a slightly longer break, get up from your seat, walk around, do some minor movement exercises.</string>
</resources>