<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity"
    android:background="@color/main_background">

    <Button
        android:id="@+id/pausePlayButton"
        android:layout_width="138dp"
        android:layout_height="69dp"
        android:layout_marginBottom="140dp"
        android:text="@string/pause_text"
        app:backgroundTint="@color/button_background"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="138dp"
        android:layout_height="69dp"
        android:text="@string/stop_text"
        app:backgroundTint="@color/button_background"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/pausePlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/centerVerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/pausePlayButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sessionText"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="fill"
        android:text="@string/until_session_end_text"
        android:textColor="@color/app_text"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/sessionTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sessionTimer"
        app:layout_constraintTop_toTopOf="@+id/sessionTimer" />

    <TextView
        android:id="@+id/sessionTimer"
        android:layout_width="126dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/zero_timer"
        android:textColor="@color/app_text"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/sessionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breakTimer"
        android:layout_width="126dp"
        android:layout_height="52dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/zero_timer"
        android:textColor="@color/app_text"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/sessionTimer"
        app:layout_constraintStart_toStartOf="@+id/sessionTimer"
        app:layout_constraintTop_toBottomOf="@+id/sessionTimer" />

    <TextView
        android:id="@+id/breakWorkText"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-black"
        android:gravity="fill"
        android:text="@string/work_text"
        android:textColor="@color/app_text"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/breakTimer"
        app:layout_constraintEnd_toEndOf="@+id/sessionText"
        app:layout_constraintStart_toStartOf="@+id/sessionText"
        app:layout_constraintTop_toTopOf="@+id/breakTimer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>